--- a/modulo-1/1.12/modulo-1-leccion-12-ejercicio-3/main.css
+++ b/modulo-1/1.12/modulo-1-leccion-12-ejercicio-3/main.css
@@ -4,7 +4,7 @@ body {
 .wrapper {
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 20vh 60vh 20vh;
   grid-gap: 5px;
 }
@@ -17,9 +17,7 @@ body {
 }
 .item1 {
   background: lightpink;
-  grid-column: span 13;
-  /* grid-row-start: 1;
-  grid-row-end: 1; */
+  grid-column: span 6;
 }
 
 .item2 {
@@ -29,10 +27,9 @@ body {
 
 .item3 {
   background: brown;
-  grid-column: 6/14;
 }
 
 .item4 {
   background: lightblue;
-  grid-column: span 13;
+  grid-column: span 6;
 }
